syntax = "proto3";
package nitric.secret.v1;

//protoc plugin options for code generation
option go_package = "nitric/v1;v1";
option java_package = "io.nitric.proto.secret.v1";
option java_multiple_files = true;
option java_outer_classname = "Secrets";
option php_namespace = "Nitric\\Proto\\Secret\\V1";
option csharp_namespace = "Nitric.Proto.Secret.v1";

// The Nitric Secret Service contract
service SecretService {
  // Updates a secret, creating a new one if it doesn't already exist
  rpc Put (SecretPutRequest) returns (SecretPutResponse);
  // Gets a secret from a Secret Store
  rpc Access (SecretAccessRequest) returns (SecretAccessResponse);
}

// Request to put a secret to a Secret Store
message SecretPutRequest {
  // The Secret to put to the Secret store
  Secret secret = 1;
  // The value to assign to that secret
  bytes value = 2;
}

// Result from putting the secret to a Secret Store
message SecretPutResponse {
  // The id of the secret
  SecretVersion secret_version = 1;
}

// Request to get a secret from a Secret Store
message SecretAccessRequest {
  // The id of the secret
  SecretVersion secret_version = 1;
}

// The secret response
message SecretAccessResponse {
  // The version of the secret that was requested
  SecretVersion secret_version = 1;
  // The value of the secret
  bytes value = 2;
}

// The secret container
message Secret {
  // The secret name
  string name = 1;
}

// A version of a secret
message SecretVersion {
  // Reference to the secret container 
  Secret secret = 1;
  // The secret version
  string version = 2;
  //map<string, string> labels = 4; //Tags for GCP and azure, 
}